<resources>
    <string name="app_name">android-2D-game-UA</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="profile">Your profile</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">0</string>
    <string name="username_word">Username:</string>
    <string name="email_word">Email:</string>
    <string name="best_score_word">Best score:</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="score_value">, score:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="game_name">Game Project</string>
    <string name="play_game">Play game</string>
    <string name="main_menu">Main menu</string>
    <string name="start_game">Start game</string>
    <string name="best_score">0</string>
    <string name="current_score">Current score:</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="game_rules">Click on the circle when it\'s yellow to get 100 points. If you click on blue, you lose!</string>
    <string name="game_goal">Test your reaction speed!</string>
    <string name="click">Click, NOW</string>
    <string name="do_not_click">Don\'t click</string>

</resources>