<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space2"
    tools:context=".fragments.MenuFragment">

    <Button
        android:id="@+id/button_game"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:alpha="0.9"
        android:backgroundTint="#CC150EE6"
        android:text="@string/play_game"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        app:icon="@drawable/ic__game"
        app:iconSize="40dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/button_leaderboard"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:alpha="0.9"
        android:backgroundTint="#CC150EE6"
        android:text="@string/leaderboard"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="24sp"
        app:icon="@drawable/ic_leaderboard"
        app:iconSize="40dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_profile"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:alpha="0.9"
        android:backgroundTint="#CC150EE6"
        android:text="@string/profile"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="20sp"
        app:icon="@drawable/ic_account"
        app:iconSize="40dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        android:backgroundTint="#CC150EE6"
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/main_menu"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>